Bug 408532 - Dolphin shows only the last artist from the artists list
Summary: Dolphin shows only the last artist from the artists list
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kfilemetadata
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.59.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Pinak Ahuja
URL:
Keywords:
: 408737 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-06-10 14:50 UTC by Andrey E.
Modified: 2019-07-07 17:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
VLC shows the correct tag, Dolphin igrores the first part of tag (402.90 KB, image/png)
2019-06-10 14:50 UTC, Andrey E.
Details
KDE Dolphin and Windows Explorer (105.55 KB, image/png)
2019-06-20 17:27 UTC, Andrey E.
Details
Two files located at indexed partition (114.46 KB, image/png)
2019-06-20 18:42 UTC, Andrey E.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey E. 2019-06-10 14:50:58 UTC
Created attachment 120753 [details]
VLC shows the correct tag, Dolphin igrores the first part of tag

SUMMARY
When artists' names are separated by comma, Dolphin shows only the last item in list. Even when comma is a part of name of musical group, Dolphin shows only the last part of that name.

STEPS TO REPRODUCE
1. Download MP3 file with several artists in ID3 tag
2. Compare tags in VLC and in Dolphin

OBSERVED RESULT
Artist: "Blooded The Brave" (the second artist)
Artist: "Нашли Поздно Утром Свистящего Хна" (the last part of name)

EXPECTED RESULT
Artist(s): "Waveshaper, Blooded The Brave"
Artist(s): "Кобыла и Трупоглазые Жабы Искали Цезию, Нашли Поздно Утром Свистящего Хна"

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.15
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.3
Kernel Version: 4.15.0-51-generic
OS Type: 64-bit
Dolphin 19.04.2
Comment 1 Alexander Stippich 2019-06-19 18:22:32 UTC
Do you have baloo content indexing enabled or disabled?
Comment 2 Andrey E. 2019-06-20 17:16:54 UTC
(In reply to Alexander Stippich from comment #1)
> Do you have baloo content indexing enabled or disabled?

Both Baloo options are enabled (search service and content indexing).
Comment 3 Andrey E. 2019-06-20 17:27:01 UTC
Created attachment 121039 [details]
KDE Dolphin and Windows Explorer
Comment 4 Alexander Stippich 2019-06-20 17:32:02 UTC
I added a fix some weeks ago for files which are not indexed, hence the question.
Do you have the possibility to test master of baloo-widgets?

Or, do you know if your file is actually indexed by baloo, and not in an excluded folder? Is it located on a network folder?
Comment 5 Andrey E. 2019-06-20 18:42:15 UTC
Created attachment 121043 [details]
Two files located at indexed partition

(In reply to Alexander Stippich from comment #4)
> I added a fix some weeks ago for files which are not indexed, hence the
> question.
> Do you have the possibility to test master of baloo-widgets?
> 
> Or, do you know if your file is actually indexed by baloo, and not in an
> excluded folder? Is it located on a network folder?

I prefer to use stable branches of repositories.
So, I have these packages installed on my system:
ii  baloo-kf5                                     5.59.0-0xneon+18.04+bionic+build27                  amd64        framework for searching and managing metadata
ii  libkf5baloo5                                  5.59.0-0xneon+18.04+bionic+build27                  amd64        framework for searching and managing metadata core lib.
ii  libkf5balooengine5                            5.59.0-0xneon+18.04+bionic+build27                  amd64        framework for searching and managing metadata plugins
ii  libkf5baloowidgets-bin                        4:19.04.2-0xneon+18.04+bionic+build17               amd64        Wigets for use with Baloo - binaries
ii  libkf5baloowidgets5:amd64                     4:19.04.2-0xneon+18.04+bionic+build17               amd64        Wigets for use with Baloo

My files are located at the local NTFS partition which is ignored by Baloo.
I have copied that files to my indexed "/" Ext4 partition, and now these tags for indexed copies are shown in more correct way (see attached image).

But Dolphin still interprets comma as a separator between artists' names. 
So, 
"Кобыла и Трупоглазые Жабы Искали Цезию, Нашли Поздно Утром Свистящего Хна" 
transforms into 
"Кобыла и Трупоглазые Жабы Искали Цезию и Нашли Поздно Утром Свистящего Хна", 
where the "и" conjunction stands for "&" ("and").

Replacing the " и " string by ", " would be better solution.
Comment 6 Andrey E. 2019-06-21 08:36:24 UTC
*** Bug 408737 has been marked as a duplicate of this bug. ***
Comment 7 Alexander Stippich 2019-06-22 10:06:37 UTC
OK, thanks for the confirmation. There is already a patch at
https://phabricator.kde.org/D20526
which should ultimately fix this.
Comment 8 Alexander Stippich 2019-07-05 20:08:52 UTC
Git commit a51e96979b4eb18c5370789e633584235b7a0853 by Alexander Stippich.
Committed on 05/07/2019 at 20:08.
Pushed by astippich into branch 'master'.

Fix extracting of some properties to match what was written

Summary:
Currently, one can write and read through taglib extractor and writer
plugins. Unfortunately, some "smart" transformation on the data are
applied when reading them. This does not allow to read exactly what was
written.

Test Plan: New automatic test is OK, no regressions.

Reviewers: bruns, mgallien

Reviewed By: bruns

Subscribers: kde-frameworks-devel, #baloo

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D20526

M  +94   -0    autotests/taglibwritertest.cpp
M  +2    -0    autotests/taglibwritertest.h
M  +27   -42   src/extractors/taglibextractor.cpp

https://commits.kde.org/kfilemetadata/a51e96979b4eb18c5370789e633584235b7a0853
Comment 9 Alexander Stippich 2019-07-07 17:52:07 UTC
Note that you will have to re-index baloo after your frameworks version was updated to 5.60 in order to get the fix