Fix extracting of some properties to match what was written

Summary:
Currently, one can write and read through taglib extractor and writer
plugins. Unfortunately, some "smart" transformation on the data are
applied when reading them. This does not allow to read exactly what was
written.

BUG: 408532

Test Plan: New automatic test is OK, no regressions.

Reviewers: bruns, mgallien

Reviewed By: bruns

Subscribers: kde-frameworks-devel, #baloo

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D20526